@@ -16,6 +16,7 @@
 - Bug 2910639: Nil reference on dylib project dependency
 - Bug 2872066: Two test failures in 4.1.2
 - Bug 2912756: dylibs missing lib prefix
+- Bug 2910202: Code::Blocks building C files as C++
 - Clean action now removes MonoDevelop .pidb files correctly
 - Added os.executef()
 
